[package]
name = "add-api"
version = "0.1.0"
authors = ["thproxy <68628393+thproxy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = {version = "0.4.5", default-features = false, features = ["json"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
